Crid clinic done
